--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ShadowFlyWind
+title: Shadowfw2ind
 SEOTitle: 影随风飘的博客 | w2eolbn
 header-img: img/post-bg-desk.jpg
 email: 551537915@qq.com
