--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/post-bg-desk.jpg
 email: 551537915@qq.com
 description: "树欲静而风不止 子欲养而亲不待"
 keyword: "shadow China tech "
-url: "http://l27.github.io"          # your host, for absolute URL
+url: "http://w2eolbn.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/w2eolbn/l27.github.io.git" # you code repository
+github_repo: "https://github.com/w2eolbn/w2eolbn.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
