--- a/_config.yml
+++ b/_config.yml
@@ -110,5 +110,8 @@ friends: [
     },{
         title: "kali",
         href: "https://kali.org/"
+    },{
+        title: "Jekyll",
+        href: "https://www.jekyll.com.cn/"
     }
 ]
